--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
+
+    include implementation("org.jsoup:jsoup:${project.jsoup_version}")
 }
 
 processResources {
