--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ archives_base_name=SkinShuffle
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.83.0+1.20
-spruceui_version=4.2.0+1.20+1.20
+spruceui_version=5.0.0+1.20
+jsoup_version=1.16.1
