--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ archives_base_name=SkinShuffle
 fabric_version=0.83.0+1.20
 spruceui_version=5.0.0+1.20
 jsoup_version=1.16.1
+cvurlio_version=1.5.1
