--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.2-SNAPSHOT'
     id 'maven-publish'
+    id 'me.fallenbreath.yamlang' version '1.3.0'
 }
 
 version = project.mod_version
@@ -13,6 +14,11 @@ repositories {
         url 'https://maven.gegy.dev'
     }
     maven { url 'https://jitpack.io' }
+}
+
+yamlang {
+    targetSourceSets = [sourceSets.main]
+    inputDir = 'assets/skinshuffle/lang'
 }
 
 dependencies {
