--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
         url 'https://maven.gegy.dev'
     }
     maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.terraformersmc.com/releases' }
 }
 
 yamlang {
@@ -26,6 +27,8 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
