--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modLocalRuntime modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
