--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '1.2-SNAPSHOT'
     id 'maven-publish'
     id 'me.fallenbreath.yamlang' version '1.3.0'
+    id "io.github.0ffz.github-packages" version "1.2.1"
 }
 
 version = project.mod_version
@@ -9,16 +10,13 @@ group = project.maven_group
 
 repositories {
     mavenLocal()
-    maven {
-        name 'Gegy'
-        url 'https://maven.gegy.dev'
-    }
+    mavenCentral()
+    maven { url 'https://maven.gegy.dev' }
     maven { url 'https://jitpack.io' }
     maven { url 'https://maven.terraformersmc.com/releases' }
-    maven {
-        name 'Xander Maven'
-        url 'https://maven.isxander.dev/releases'
-    }
+    maven { url 'https://maven.shedaniel.me/' }
+    maven { url 'https://maven.isxander.dev/releases' }
+    maven githubPackage.invoke("axieum/authme")
 }
 
 loom {
@@ -37,6 +35,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modLocalRuntime modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
+
+    modLocalRuntime "me.axieum.mcmod.authme:authme:7.0.1+1.20"
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
