--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,11 @@ dependencies {
     modLocalRuntime modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 
     modImplementation "com.ptsmods:devlogin:3.2.2"
+    include implementation('com.konghq:unirest-java:3.11.09:standalone')
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
     include implementation("org.jsoup:jsoup:${project.jsoup_version}")
-    include implementation("com.github.corese4rch:cvurl-io:${project.cvurlio_version}")
-    include implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.8.5")
 }
 
 processResources {
