--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,16 @@ plugins {
     id 'fabric-loom' version '1.2-SNAPSHOT'
     id 'maven-publish'
     id 'me.fallenbreath.yamlang' version '1.3.0'
+    id "org.quiltmc.gradle.licenser" version "2.0.1"
 }
 
 version = project.mod_version
 group = project.maven_group
+
+license {
+    rule file("./HEADER")
+    include '**/*.java'
+}
 
 repositories {
     mavenLocal()
