--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
     maven { url 'https://maven.terraformersmc.com/releases' }
     maven { url 'https://maven.shedaniel.me/' }
     maven { url 'https://maven.isxander.dev/releases' }
+    maven { url 'https://repo.inventivetalent.org/repository/public/' }
 }
 
 loom {
@@ -47,6 +48,7 @@ dependencies {
     include modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}")
 
     include implementation("org.jsoup:jsoup:${project.jsoup_version}")
+    include implementation("org.mineskin:java-client:+")
     include implementation("commons-validator:commons-validator:1.7")
 }
 
