--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ spruceui_version=5.0.3+1.20.2
 jsoup_version=1.16.1
 cvurlio_version=1.5.1
 modmenu_version=8.0.0
-yacl_version=3.2.1+1.20
+yacl_version=3.3.0-beta.1+1.20.2
