--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
 loader_version=0.14.23
 # Mod Properties
-mod_version=1.0.2+1.20.2
+mod_version=1.0.2+1.20.4
 maven_group=com.mineblock11
 archives_base_name=SkinShuffle
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.90.0+1.20.2
-spruceui_version=5.0.3+1.20.2
+fabric_version=0.92.1+1.20.4
+spruceui_version=5.0.3+1.20.4
 jsoup_version=1.16.1
 cvurlio_version=1.5.1
-modmenu_version=8.0.0
-yacl_version=3.3.0-beta.1+1.20.2
+modmenu_version=9.0.0
+yacl_version=3.3.1+1.20.4
