--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.4-SNAPSHOT'
+    id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
     id 'me.fallenbreath.yamlang' version '1.3.0'
     id "org.quiltmc.gradle.licenser" version "2.0.1"
@@ -49,7 +49,7 @@ dependencies {
 
     modLocalRuntime modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 
-    modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.1.2")
+//    modImplementation "com.ptsmods:devlogin:3.5"
     include implementation('com.konghq:unirest-java:3.11.09:standalone')
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
@@ -58,6 +58,8 @@ dependencies {
     include implementation("org.jsoup:jsoup:${project.jsoup_version}")
     include implementation("org.mineskin:java-client:+")
     include implementation("commons-validator:commons-validator:1.7")
+
+    modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.0")
 
     // FancyMenu testing.
 //    modImplementation "curse.maven:konkrete-fabric-416797:4581979"
