Backport to 1.20.1 to begin stonecutterification

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.14.23
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.11
 # Mod Properties
-mod_version=1.1.0+1.20.2
+mod_version=2.0.0+1.20.1
 maven_group=com.mineblock11
 archives_base_name=SkinShuffle
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.90.0+1.20.2
-spruceui_version=5.0.3+1.20.2
+fabric_version=0.92.2+1.20.1
+spruceui_version=5.0.0+1.20
 jsoup_version=1.16.1
 cvurlio_version=1.5.1
-modmenu_version=8.0.0
-yacl_version=3.3.0-beta.1+1.20.2
+modmenu_version=7.2.2
+yacl_version=3.5.0+1.20.1-fabric
