--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.5-SNAPSHOT'
+    id 'fabric-loom' version '1.6-SNAPSHOT'
     id 'maven-publish'
     id 'me.fallenbreath.yamlang' version '1.3.0'
     id "org.quiltmc.gradle.licenser" version "2.0.1"
@@ -30,6 +30,17 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+        filter {
+            includeGroup "maven.modrinth"
+        }
+    }
 }
 
 loom {
@@ -53,11 +64,14 @@ dependencies {
     include implementation('com.konghq:unirest-java:3.11.09:standalone')
 
     include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
-    include modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}")
+    include modImplementation("maven.modrinth:cicada:0.8.1+1.20.1")
+    include modImplementation("dev.isxander:yet-another-config-lib:${project.yacl_version}")
 
     include implementation("org.jsoup:jsoup:${project.jsoup_version}")
     include implementation("org.mineskin:java-client:+")
     include implementation("commons-validator:commons-validator:1.7")
+
+
 
     modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.0")
 
