--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,16 @@ org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.15.11
+deps.yarn=1.20.1+build.10
+deps.loader=0.15.11
 # Mod Properties
-mod_version=2.0.0+1.20.1
-maven_group=com.mineblock11
-archives_base_name=SkinShuffle
+mod.version=2.0.0+1.20.1
+mod.name=SkinShuffle
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.92.2+1.20.1
-spruceui_version=5.0.0+1.20
-jsoup_version=1.16.1
-cvurlio_version=1.5.1
-modmenu_version=7.2.2
+deps.fabric_api=0.92.2+1.20.1
+deps.spruceui=5.0.0+1.20
+deps.jsoup=1.16.1
+deps.cvurlio=1.5.1
+runtime.modmenu=7.2.2
 yacl_version=3.5.0+1.20.1-fabric
