--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'fabric-loom' version '1.7-SNAPSHOT'
     id 'maven-publish'
-    id 'me.fallenbreath.yamlang' version '1.3.0'
     id "org.quiltmc.gradle.licenser" version "2.0.1"
 }
 
@@ -60,11 +59,6 @@ loom {
     accessWidenerPath = file("src/main/resources/skinshuffle.accesswidener")
 }
 
-yamlang {
-    targetSourceSets = [sourceSets.main]
-    inputDir = 'assets/skinshuffle/lang'
-}
-
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.'deps.yarn'}:v2"
@@ -94,8 +88,8 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.'deps.loader'
+                "loader_version": project.'deps.loader',
+                "target_minecraft": project.'mod.target'
     }
 }
 
