--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ minecraft_version=1.20.1
 deps.yarn=1.20.1+build.10
 deps.loader=0.15.11
 # Mod Properties
+mod.target=>=1.20 <=1.20.1
 mod.version=2.0.0+1.20.1
 mod.name=SkinShuffle
 # Dependencies
