--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.1
-deps.yarn=1.20.1+build.10
+
 deps.loader=0.15.11
-# Mod Properties
-mod.target=>=1.20 <=1.20.1
-mod.version=2.0.0+1.20.1
+mod.version=2.0.0
 mod.name=SkinShuffle
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-deps.fabric_api=0.92.2+1.20.1
-deps.spruceui=5.0.0+1.20
-deps.jsoup=1.16.1
-deps.cvurlio=1.5.1
-runtime.modmenu=7.2.2
-yacl_version=3.5.0+1.20.1-fabric
