--- a/versions/1.20.4/gradle.properties
+++ b/versions/1.20.4/gradle.properties
@@ -1,10 +1,11 @@
 runtime.modmenu=9.2.0
 
 mod.target=>=1.20.3 <=1.20.4
+fabric_api.target=<0.97.0
 
 deps.spruceui=5.0.3+1.20.4
 deps.cicada=0.8.1+1.20.2-1.20.4
 deps.yacl=3.5.0+1.20.4-fabric
 
-deps.fabric_api=0.97.1+1.20.4
+deps.fabric_api=0.95.1+1.20.4
 deps.yarn=1.20.4+build.3
