--- a/versions/1.20.6/gradle.properties
+++ b/versions/1.20.6/gradle.properties
@@ -1,5 +1,7 @@
 runtime.modmenu=10.0.0
 runtime.etf=EDWEfvFs
+runtime.tslatentitystatus=XiJI4Opp
+runtime.provis=8R2TIFPt
 
 mod.target=>=1.20.5 <=1.20.6
 
