--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -1,5 +1,7 @@
 runtime.modmenu=7.2.2
 runtime.etf=fqFnWIXs
+runtime.tslatentitystatus=BsJn58K6
+runtime.provis=oniBYSAC
 
 mod.target=>=1.20 <=1.20.1
 
