--- a/versions/1.20.4/gradle.properties
+++ b/versions/1.20.4/gradle.properties
@@ -1,5 +1,7 @@
 runtime.modmenu=9.2.0
 runtime.etf=9qagksz6
+runtime.tslatentitystatus=dpNAttAb
+runtime.provis=iGYkAWao
 
 mod.target=>=1.20.3 <=1.20.4
 
