Add support for 1.21.1

--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -3,7 +3,7 @@ runtime.etf=O3jDICoH
 runtime.tslatentitystatus=zGVbOJOH
 runtime.provis=XnZ8MDSy
 
-mod.target=1.21
+mod.target=>=1.21 <=1.21.1
 
 deps.spruceui=5.1.0+1.21
 deps.cicada=0.8.1+1.21-and-above
