--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        game_version: [ "1.20.1", "1.20.4", "1.20.6", "1.21" ]
+        game_version: [ "1.20.1", "1.21" ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
