--- a/settings.gradle
+++ b/settings.gradle
@@ -12,14 +12,12 @@ pluginManagement {
 }
 
 plugins {
-    id "dev.kikugie.stonecutter" version "0.5-alpha.4"
+    id "dev.kikugie.stonecutter" version "0.5-beta.5"
 }
 
 stonecutter {
-    shared {
-        versions '1.21', '1.20.6', '1.20.4', '1.20.1'
-        vcsVersion '1.21'
+    create(rootProject) {
+        versions '1.21', '1.20.1'
+        vcsVersion = '1.21'
     }
-
-    create rootProject
 }
