--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ plugins {
 
 stonecutter {
     create(rootProject) {
-        versions '1.21.3', '1.21', '1.20.1'
+        versions '1.21.3', '1.21'
         vcsVersion = '1.21.3'
     }
 }
