--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ pluginManagement {
 }
 
 plugins {
-    id "dev.kikugie.stonecutter" version "+"
+    id "dev.kikugie.stonecutter" version "0.6+"
 }
 
 stonecutter {
