--- a/versions/1.21.3/gradle.properties
+++ b/versions/1.21.3/gradle.properties
@@ -1,5 +1,6 @@
 runtime.modmenu=12.0.0-beta.1
 runtime.minecraftcapes=fabric-1.21.3-12.4.0
+runtime.capes=mkf1dFwO
 runtime.etf=LEywH685
 
 mod.target=>=1.21.2 <=1.21.3
