--- a/versions/1.21.4/gradle.properties
+++ b/versions/1.21.4/gradle.properties
@@ -1,5 +1,6 @@
 runtime.modmenu=13.0.0-beta.1
 runtime.minecraftcapes=fabric-1.21.4-12.4.0
+runtime.capes=W8c8LF0s
 runtime.etf=Aan0aaUL
 
 mod.target=1.21.4
