--- a/versions/1.21.5/gradle.properties
+++ b/versions/1.21.5/gradle.properties
@@ -1,5 +1,6 @@
 runtime.modmenu=14.0.0-rc.2
 runtime.minecraftcapes=fabric-1.21.5-12.4.0
+runtime.capes=htKsCP2s
 runtime.etf=yOuAC3la
 
 mod.target=1.21.5
