--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -1,5 +1,6 @@
 runtime.modmenu=11.0.1
 runtime.minecraftcapes=fabric-1.21-12.4.0
+runtime.capes=6SzVPVR4
 runtime.etf=O3jDICoH
 
 mod.target=>=1.21 <=1.21.1
