fix: invis player in inventory + 1.21.7

--- a/versions/1.21.6/gradle.properties
+++ b/versions/1.21.6/gradle.properties
@@ -3,7 +3,7 @@ runtime.minecraftcapes=fabric-1.21.6-12.4.0
 runtime.capes=htKsCP2s
 runtime.etf=aEVKKdXX
 
-mod.target=1.21.6
+mod.target=>=1.21.6 <=1.21.7
 
 deps.spruceui=8.0.0+1.21.6
 deps.yacl=3.7.1+1.21.6-fabric
